--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
   <script type="text/javascript" language="javascript"
     src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script type="text/javascript" language="javascript" src="assets/chemPred.js"></script>
-
-  <!--script type="text/javascript" language="javascript" src="http://localhost:8180/auth/js/keycloak.js"></!--script-->
+  <script type="text/javascript" language="javascript" src="http://localhost:8180/auth/js/keycloak.js"></script>
 
 </head>
 
